--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "theme": "light"
     },
     "engines": {
-        "vscode": "^1.72.0"
+        "vscode": "^1.72.0-insider"
     },
     "keywords": [
         "jupyter",
